--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cally": "^0.8.0",
     "daisyui": "^5.0.0",
     "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
