--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.0.0",
     "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   },
