--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "cally": "^0.8.0",
     "daisyui": "^5.0.0",
     "flowbite-react": "^0.10.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
